--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec8127e
+	base = ef42b0e
 	trimbase = 
 	parent = release/hydro/moveit_ikfast
-	previous = 
+	previous = ec8127e
