--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4338a3
+	base = 3b4d31a
 	trimbase = 
 	parent = debian/hydro/moveit_ikfast
-	previous = 
+	previous = a4338a3
