Rebase from 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,12 @@ catkin_package()
 ## Install ##
 #############
 
-catkin_python_setup()
+#catkin_python_setup()
+
 install(
   PROGRAMS 
-    src/create_ikfast_moveit_plugin.py
-    src/round_collada_numbers.py
+    scripts/create_ikfast_moveit_plugin.py
+    scripts/round_collada_numbers.py
   DESTINATION 
     ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
