--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.0.3": ["Dave Coleman", "davetcoleman@gmail.com"]}
+{"3.0.4": ["Dave Coleman", "davetcoleman@gmail.com"], "3.0.3": ["Dave Coleman", "davetcoleman@gmail.com"]}
