Imported upstream version '3.0.7' of 'upstream'

--- a/templates/CMakeLists.txt
+++ b/templates/CMakeLists.txt
@@ -16,11 +16,11 @@ link_directories(${catkin_LIBRARY_DIRS})
 
 catkin_package(
   LIBRARIES
-  DEPENDS
-  moveit_core
-  pluginlib
-  roscpp
-  tf_conversions
+  CATKIN_DEPENDS
+    moveit_core
+    pluginlib
+    roscpp
+    tf_conversions
 )
 
 include_directories(include)
@@ -33,7 +33,6 @@ add_library(${IKFAST_LIBRARY_NAME} src/_ROBOT_NAME___GROUP_NAME__ikfast_moveit_p
 target_link_libraries(${IKFAST_LIBRARY_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${LAPACK_LIBRARIES})
 
 install(TARGETS ${IKFAST_LIBRARY_NAME} LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
-install(DIRECTORY include/ DESTINATION include)
 
 install(
   FILES
