--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1814925
+	base = 994dc40
 	trimbase = 
 	parent = release/indigo/moveit_ikfast
-	previous = 
+	previous = 1814925
