--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83031a4
+	base = 7a57322
 	trimbase = 
 	parent = debian/indigo/moveit_ikfast
-	previous = 
+	previous = 83031a4
