--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 62ed0cd
+	base = bd32203
 	trimbase = 
 	parent = release/indigo/moveit_ikfast
-	previous = 
+	previous = 62ed0cd
