--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = db203af
+	base = f7367e7
 	trimbase = 
 	parent = rpm/indigo/moveit_ikfast
-	previous = 
+	previous = db203af
