--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>moveit_ikfast</name>
-  <version>3.0.7</version>
+  <version>3.1.0</version>
   <description>Generates a IKFast kinematics plugin for MoveIt using OpenRave generated cpp files. </description>
 
   <author>Dave Coleman</author>
@@ -8,6 +8,7 @@
   <author>David Butterworth</author>
   <author>Mathias Lüdtk</author>
 
+  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
   <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
 
   <license>BSD</license>
