--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.0.7-1": ["Tue Oct 07 2014", "Dave Coleman", "davetcoleman@gmail.com"]}
+{"3.1.0-0": ["Tue Oct 07 2014", "G.A. vd. Hoorn", "g.a.vanderhoorn@tudelft.nl"], "3.0.7-1": ["Tue Oct 07 2014", "Dave Coleman", "davetcoleman@gmail.com"]}
