--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0ac3c88
+	base = 8f111dd
 	trimbase = 
 	parent = release/hydro/moveit_ikfast
-	previous = 
+	previous = 0ac3c88
