--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 56dbb38
+	base = 7c39c24
 	trimbase = 
 	parent = rpm/hydro/moveit_ikfast
-	previous = 
+	previous = 56dbb38
