--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 00e3e41
+	base = fa1dea4
 	trimbase = 
 	parent = rpm/indigo/moveit_ikfast
-	previous = 
+	previous = 00e3e41
